crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3000_absolute_workdir_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3000",
    "help": null,
    "labels": [],
    "message": "WORKDIR should be absolute",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 11,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "error"
  },
  {
    "code": "RDL3000",
    "help": null,
    "labels": [],
    "message": "WORKDIR should be absolute",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 14,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 14
    },
    "severity": "error"
  },
  {
    "code": "RDL3000",
    "help": null,
    "labels": [],
    "message": "WORKDIR should be absolute",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 17,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 17
    },
    "severity": "error"
  },
  {
    "code": "RDL3000",
    "help": null,
    "labels": [],
    "message": "WORKDIR should be absolute",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 20,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 20
    },
    "severity": "error"
  }
]
