crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3003_use_workdir_for_cd_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 150
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3003",
    "help": null,
    "labels": [],
    "message": "use WORKDIR instead of RUN cd",
    "path": "",
    "primary_span": {
      "end_byte": 58,
      "end_column": 20,
      "end_line": 4,
      "start_byte": 39,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "RDL3003",
    "help": null,
    "labels": [],
    "message": "use WORKDIR instead of RUN cd",
    "path": "",
    "primary_span": {
      "end_byte": 103,
      "end_column": 45,
      "end_line": 5,
      "start_byte": 59,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  }
]
