crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3004_no_sudo_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3004",
    "help": null,
    "labels": [],
    "message": "avoid sudo in Docker builds; use USER or a privilege-drop tool instead",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "error"
  },
  {
    "code": "RDL3004",
    "help": null,
    "labels": [],
    "message": "avoid sudo in Docker builds; use USER or a privilege-drop tool instead",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  }
]
