crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3007_no_latest_tag_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 1,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 1
    },
    "severity": "warning"
  },
  {
    "code": "RDL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "RDL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  }
]
