crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3010_use_add_for_archives_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 246
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3010",
    "help": null,
    "labels": [],
    "message": "use ADD when local archive extraction is intended",
    "path": "",
    "primary_span": {
      "end_byte": 52,
      "end_column": 18,
      "end_line": 3,
      "start_byte": 35,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "info"
  },
  {
    "code": "RDL3010",
    "help": null,
    "labels": [],
    "message": "use ADD when local archive extraction is intended",
    "path": "",
    "primary_span": {
      "end_byte": 73,
      "end_column": 21,
      "end_line": 4,
      "start_byte": 53,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "info"
  },
  {
    "code": "RDL3010",
    "help": null,
    "labels": [],
    "message": "use ADD when local archive extraction is intended",
    "path": "",
    "primary_span": {
      "end_byte": 112,
      "end_column": 39,
      "end_line": 5,
      "start_byte": 74,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "info"
  }
]
