crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3011_valid_expose_port_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `65536`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "error"
  },
  {
    "code": "RDL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `70000`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "error"
  },
  {
    "code": "RDL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `-1`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "error"
  },
  {
    "code": "RDL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `port`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "error"
  },
  {
    "code": "RDL3011",
    "help": null,
    "labels": [],
    "message": "invalid exposed port `80-90`",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 9,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "error"
  }
]
