crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3012_healthcheck_cardinality_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 295
expression: "serde_json::to_value(&cases).expect(\"cases should serialize\")"
---
[
  {
    "findings": [],
    "fixture": "RDL3012.no-healthcheck"
  },
  {
    "findings": [],
    "fixture": "RDL3012.single-healthcheck-cmd"
  },
  {
    "findings": [],
    "fixture": "RDL3012.single-healthcheck-none"
  },
  {
    "findings": [
      {
        "code": "RDL3012",
        "help": null,
        "labels": [],
        "message": "only one HEALTHCHECK is allowed",
        "path": "",
        "primary_span": {
          "end_byte": 93,
          "end_column": 17,
          "end_line": 3,
          "start_byte": 77,
          "start_column": 1,
          "start_line": 3
        },
        "severity": "error"
      },
      {
        "code": "RDL3012",
        "help": null,
        "labels": [],
        "message": "only one HEALTHCHECK is allowed",
        "path": "",
        "primary_span": {
          "end_byte": 141,
          "end_column": 48,
          "end_line": 4,
          "start_byte": 94,
          "start_column": 1,
          "start_line": 4
        },
        "severity": "error"
      }
    ],
    "fixture": "RDL3012.duplicate-healthcheck"
  }
]
